# ai-duoforge

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
bridge/implementations/cli/: abp.sh
bridge/implementations/file-bridge/: file_bridge.py
bridge/implementations/hermes-skill/: SKILL.md
bridge/spec/: SPEC.md
configs/: analysis.yaml  coding.yaml  human-resources.yaml  real-estate.yaml  research.yaml  translation.yaml  writing.yaml
duoforge/: cli.py
examples/: quickstart.md  self-hosted-demo.md  two-agent-chat.md
